Add ways to detect control packets

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,7 +1,13 @@
 TARGET			= libudt.so
 CC 				= gcc
 CC_FLAGS 		= -Wall -pedantic -shared -fPIC
-OBJS			= socket.o bind.o close.o connect.o io.o packet.o
+OBJS			= socket.o \
+				  bind.o \
+				  close.o \
+				  connect.o \
+				  io.o \
+				  packet.o \
+				  state.o
 
 $(TARGET): 		$(OBJS)
 				$(CC) $(CC_FLAGS) $(OBJS) -o $@
