--- a/src/Makefile
+++ b/src/Makefile
@@ -1,6 +1,7 @@
 TARGET			= libudt-c.so
 CC 				= gcc
 CC_FLAGS 		= -Wall -pedantic -shared -fPIC
+INC				= udt.h packet.h state.h
 OBJS			= socket.o \
 				  bind.o \
 				  close.o \
@@ -17,5 +18,5 @@ $(TARGET): 		$(OBJS)
 clean:
 				rm -f *.o $(OBJS) $(TARGET)
 
-$(OBJS):%.o:	%.c Makefile
+$(OBJS):%.o:	%.c $(INC) Makefile
 				$(CC) $(CC_FLAGS) -I. -c $<
