Use threads to run sender and receiver

--- a/progs/Makefile
+++ b/progs/Makefile
@@ -1,6 +1,6 @@
 CC 				= gcc
 CC_FLAGS 		= -Wall -pedantic
-CL_FLAGS		= -L../src -ludt-c
+CL_FLAGS		= -L../src -ludt-c -lpthread
 INC				= ../src/udt.h \
 				  ../src/packet.h \
 				  ../src/state.h
