--- a/src/Makefile
+++ b/src/Makefile
@@ -1,7 +1,7 @@
 TARGET			= libudt-c.so
 CC 				= gcc
 CC_FLAGS 		= -Wall -pedantic -shared -fPIC
-INC				= udt.h packet.h state.h buffer.h util.h receiver.h core.h
+INC				= udt.h packet.h buffer.h util.h receiver.h core.h
 OBJS			= socket.o \
 				  bind.o \
 				  close.o \
@@ -10,7 +10,6 @@ OBJS			= socket.o \
 				  accept.o \
 				  io.o \
 				  packet.o \
-				  state.o \
 				  buffer.o \
 				  send_buffer.o \
 				  recv_buffer.o \
@@ -24,8 +23,5 @@ $(TARGET): 		$(OBJS)
 clean:
 				rm -f *.o $(OBJS) $(TARGET)
 
-util.o:			util.c util.h
-				$(CC) $(CC_FLAGS) -I. -c $< -lpthread
-
 $(OBJS):%.o:	%.c $(INC) Makefile
-				$(CC) $(CC_FLAGS) -I. -c $< -lpthread
+				$(CC) $(CC_FLAGS) -I. -c $<
