--- a/progs/Makefile
+++ b/progs/Makefile
@@ -1,7 +1,7 @@
 CC 				= gcc
 CC_FLAGS 		= -Wall -pedantic
 CL_FLAGS		= -L../src -ludt-c -lpthread
-INC				= ../src/udt.h
+INC				= ../include/udt.h
 OBJS			= server.o client.o
 TARGETS			= server client
 
